--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<header>
+  <h1>PESTECO</h1>
+  <nav>
+    <%= link_to 'Clients', clients_path %> |
+    <%= link_to 'Users', users_path %>
+    <br>
+    <%= link_to 'Login', login_path %>
+  </nav>
+</header>
+<hr>
 <%= yield %>
 
 </body>
