--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -9,21 +9,8 @@
 <hr>
 
 <h2>Buildings</h2>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Address</th>
-    <th>Reports</th>
-  </tr>
-  <% @client.buildings.each do |building| %>
-  <tr>
-    <td><%= link_to building.name, building_path(building) %></td>
-    <td><%= building.address %></td>
-    <td><%= building.reports.length %></td>
-  </tr>
-  <% end %>
+<%= render 'shared/buildings', object: @client %>
 
-</table>
 <hr>
 
 <h2>Users</h2>
@@ -40,5 +27,10 @@
     <td><%= user.mobile %></td>
   </tr>
   <% end %>
-
 </table>
+
+<br>
+
+<button>
+  <%= link_to 'Add new user', new_client_user_path(@client) %>
+</button>
