--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%= @user.name %></h1>
+
+<p>
+  Company:
+  <% if @user.client %>
+    <%= @user.client.name %>
+  <% end %>
+</p>
+<p>Email: <%= @user.email %></p>
+<p>Mobile: <%= @user.mobile %></p>
+
+<p>
+  <%= link_to 'Edit User', edit_user_path(@user) %> |
+  <%= link_to 'Remove User', user_path(@user), method: :delete, data: {confirm: 'Are you sure?'} %>
+</p>
+
+<hr>
+
+<h2>Buildings</h2>
+<%= render 'shared/buildings', object: @user %>
