--- a/app/views/buildings/edit.html.erb
+++ b/app/views/buildings/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Buildings#edit</h1>
-<p>Find me in app/views/buildings/edit.html.erb</p>
+<h1>Edit <%= @building.name %></h1>
+<%= render :partial => 'form' %>
