--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,25 @@
 </head>
 <body>
 <header>
-  <h1>PESTECO</h1>
+  <h1><%= link_to 'PESTECO', root_path %></h1>
   <nav>
     <%= link_to 'Clients', clients_path %> |
     <%= link_to 'Users', users_path %>
     <br>
-    <%= link_to 'Login', login_path %>
+    <%= link_to 'Login', login_path %> |
+    <%= link_to 'Logout', logout_path, method: :delete %>
   </nav>
 </header>
+
+<!-- FLASH message -->
+<% if flash[:success] %>
+  <p><%= flash[:success] %></p>
+<% end %>
+<% if flash[:error] %>
+  <p><%= flash[:error] %></p>
+<% end %>
+
+
 <hr>
 <%= yield %>
 
