--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Session#new</h1>
-<p>Find me in app/views/session/new.html.erb</p>
+<h1>Login</h1>
+<%= form_tag login_path do %>
+  <%= label_tag :email %>
+  <%= email_field_tag :email, '', required: true, autofocus: true %>
+  <%= label_tag :password %>
+  <%= password_field_tag :password, '', required: true %>
+  <%= submit_tag 'Login' %>
+<% end %>
