--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Reports#new</h1>
-<p>Find me in app/views/reports/new.html.erb</p>
+<h1>Add new report for <%= @building.name %></h1>
+<%= render :partial => 'form' %>
