--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Reports#edit</h1>
-<p>Find me in app/views/reports/edit.html.erb</p>
+<h1>Edit report for <%= @report.building.name %></h1>
+<%= render :partial => 'form' %>
