--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_for([@building, @report]) do |f| %>
+<%= form_for([@building, @report], :html => {:multipart => true}) do |f| %>
   <fieldset>
     <p>
       <%= f.label 'Date of report' %><br>
-      <%= f.date_field :date, :autofocus => true, :required => true %>
+      <%= f.date_field :date, :value => Date.today, :autofocus => true, :required => true %>
     </p>
     <p>
       <%= f.label 'PDF file upload' %><br>
