Added html5 pdf file type validation

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -6,7 +6,7 @@
     </p>
     <p>
       <%= f.label 'PDF file upload' %><br>
-      <%= f.cl_image_upload :pdf, :required => true %>
+      <%= f.cl_image_upload :pdf, :required => true, :html => {:accept => '.pdf'} %>
     </p>
     <p>
       <%= f.submit %>
