Added client controller and view authorizations

--- a/app/views/buildings/_form.html.erb
+++ b/app/views/buildings/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for([@client, @building]) do |f| %>
   <fieldset>
+    <%= render "shared/errors", object: @building %>
     <p>
       <%= f.label :name %><br>
       <%= f.text_field :name, :autofocus => true, :required => true %>
