--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Admin Confidential</h1>
+<h1>Admin client list</h1>
 
 <table>
   <tr>
     <th>Client</th>
-    <th>Venues</th>
-    <th>Contact</th>
+    <th>Buildings</th>
+    <th>Users</th>
   </tr>
 <% @clients.each do |client| %>
   <tr>
