--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,8 +1,15 @@
 <h1>Login</h1>
+
 <%= form_tag login_path do %>
-  <%= label_tag :email %>
-  <%= email_field_tag :email, '', required: true, autofocus: true %>
-  <%= label_tag :password %>
-  <%= password_field_tag :password, '', required: true %>
-  <%= submit_tag 'Login' %>
+  <p>
+    <%= label_tag :email %><br>
+    <%= email_field_tag :email, '', required: true, autofocus: true %>
+  </p>
+  <p>
+    <%= label_tag :password %><br>
+    <%= password_field_tag :password, '', required: true %>
+  </p>
+  <p>
+    <%= submit_tag 'Login' %>
+  </p>
 <% end %>
