--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,16 @@
   <meta name="viewport" content="minimal-ui, width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="mobile-web-app-capable" content="yes"/>
+  <%= favicon_link_tag 'pesteco_favicon.png', rel: 'apple-touch-icon' %>
 </head>
 <body>
 <header>
-  <h1><%= link_to 'PESTECO', root_path %></h1>
+
+  <div id='logo'>
+    <%= link_to image_tag('pesteco_logo.png'), root_path %>
+  </div>
+
+
   <nav>
     <!-- Login if not signed in, and logout otherwise -->
     <% unless @current_user%>
