Changed email url

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,3 +1,4 @@
 <h2>Thank you for signing up, <%= @user.name %></h2>
 <p>You are now authorized to access your <%= @user.client.name %> Pesteco reports.</p>
-<p>Click <%= link_to 'here', root_path %> to sign in.</p>
+<p>Click <%= link_to 'here', root_url %> to sign in.</p>
+<p>Your temporary password is <strong>chicken</strong></p>
