--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -2,4 +2,6 @@ Thank you for signing up, <%= @user.name %>
 
 You are now authorized to access your <%= @user.client.name %> Pesteco reports
 
-Click <%= link_to 'here', root_path %> to sign in
+Click <%= link_to 'here', root_url %> to sign in.
+
+Your temporary password is chicken
