added mailer logo and styles

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,5 +1,8 @@
 <html>
   <body>
     <%= yield %>
+    <div id="signature">
+      <%= cl_image_tag("Pesteco/logosignature" ) %>
+    </div>
   </body>
 </html>
