--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,8 +1,17 @@
 <html>
+<head>
+  <style type="text/css">
+    #signature img {
+      margin-top: 100px;
+      margin-bottom: 50px;
+      max-width: 80%;
+    }
+  </style>
+</head>
   <body>
     <%= yield %>
     <div id="signature">
-      <%= cl_image_tag("Pesteco/logosignature" ) %>
+      <%= cl_image_tag("Pesteco/logosignature") %>
     </div>
   </body>
 </html>
