--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -5,11 +5,11 @@
   <fieldset>
     <%= render "shared/errors", object: @user %>
     <p>
-      <%= f.label :password %><br>
+      <%= f.label 'New password' %><br>
       <%= f.password_field :password, :required => true %>
     </p>
     <p>
-      <%= f.label :password_confirmation %><br>
+      <%= f.label 'Confirm new password' %><br>
       <%= f.password_field :password_confirmation, :required => true %>
     </p>
     <p>
