--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,5 @@
 <p>To reset your Pesteco dashboard password click the URL below.</p>
 
-<%= edit_password_reset_url(@user.password_reset_token) %>
+<p><%= link_to 'Password reset link', edit_password_reset_url(@user.password_reset_token) %></p>
 
 <p>If you did not request your password to be reset please ignore this email and your password will stay as it is.</p>
