--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,5 +1,5 @@
 To reset your Pesteco dashboard password click the URL below.
 
-<%= edit_password_reset_url(@user.password_reset_token) %>
+<%= link_to 'Password reset link', edit_password_reset_url(@user.password_reset_token) %>
 
 If you did not request your password to be reset please ignore this email and your password will stay as it is.
