--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,11 @@
-<h2>Thank you for signing up, <%= @user.name %></h2>
+<h2>Welcome to Pesteco dashboard</h2>
 
-<p>You are now authorized to access your <%= @user.client.name %> Pesteco reports.</p>
+<p><%= @user.name %>,</p>
+<p>You have been authorized to access <%= @user.client.name %>'s Pesteco reports</p>
 
-<p>Click <%= link_to 'here', root_url %> to sign in.</p>
+<p><%= link_to 'Click here to set your new password', edit_password_reset_url(@user.password_reset_token) %></p>
+
+<p>Kind regards,</p>
+
+<p><strong>Pesteco</strong></p>
+<p>Bogdan Kolev</p>
