--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -15,7 +15,11 @@
 
 <% @building.reports.order('date DESC').each do |report|  %>
   <p>
-    <a href="<%= cl_image_path(report.pdf) %>" target="_blank"><%= report.date.strftime('%a, %d %B %Y') %></a>
+    <strong><%= report.date.strftime('%a, %d %b %Y') %>:</strong>
+    <%= link_to 'Open', cl_image_path(report.pdf), :target => '_blank' %> |
+    <%= link_to 'Save', cl_image_path(report.pdf, :flags => :attachment) %> |
+    <%= format_email_report(report) %>
+
     <% if @current_user && @current_user.admin %>
       | <%= link_to 'Edit', edit_report_path(:id => report, :building_id => @building) %>
       | <%= link_to 'Delete', report_path(:id => report, :building_id => @building), method: :delete, :data => {confirm: 'Are you sure?'} %>
@@ -23,6 +27,8 @@
   </p>
 
 <% end %>
+
+
 
 <br>
 
