Added pages and posts CRUD system

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,9 @@
       </p>
       <ul>
         <li><%= link_to 'About', about_path %></li>
-        <li><%= link_to 'Certificates', blog_path %></li>
-        <li><%= link_to 'Insurance', blog_path %></li>
+        <li><%= link_to 'Certification', certification_path %></li>
+        <li><%= link_to 'Insurance', insurance_path %></li>
+        <li><%= link_to 'News', news_path %></li>
         <li><%= link_to 'Contact', contact_path %></li>
       </ul>
 
