--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Contact us</h1>
+<p>Tel: 0411 268 868</p>
+<p>Email: bogdan@pesteco.com</p>
+<p>Address: PO Box 817, Bondi Junction, NSW, 1355</p>
