--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,11 +17,11 @@
     </p>
     <p>
       <%= f.label 'Reset password' %><br>
-      <%= f.password_field :name %>
+      <%= f.password_field :name, :required => true %>
     </p>
     <p>
       <%= f.label 'Confirm password' %><br>
-      <%= f.password_field :name %>
+      <%= f.password_field :name, :required => true %>
     </p>
 
     <p>
