--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -2,6 +2,7 @@
 <p>Pesteco is the most certified pest management company in Australia, across all commercial, residential and hospitality sectors.</p>
 <p>We guarantee a higher quality standard, an environmentally sustainable solution and the safest possible work environment for our client and our employees.</p>
 <p><%= link_to 'See our certification', certification_path %></p>
+<p><%= link_to 'See our insurance', insurance_path %></p>
 
 <h3>Pricing</h3>
 <p>Our property management background has taught us the importance of value. That's why we take the time to understand our clients in order to tailor a solution that's right for them.</p>
