--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,17 @@
  *= require_self
  */
 
+ /* COLOR TEMPLATE */
+ $color-primary1: #265C00;
+ $color-primary2: #68A225;
+ $color-primary3: #B3DE81;
+ $color-primary4: #F1FCE3;
+ $color-secondary1: #565656;
+ $color-secondary2: #9E9E9E;
+ $color-secondary3: #DEDEDE;
+ $color-secondary4: #FDFFFF;
+
+
 /* UNIVERSALS */
 
 * {
@@ -25,18 +36,26 @@ html, body {
  margin: 0;
  max-width: 100%;
  font-family: 'Arial';
- font-size: 14px;
+ font-size: 16px;
  line-height: 1.6;
+ background-color: $color-secondary4;
+ color: $color-secondary1;
 }
 /* TYPOGRAPHY */
+h2, h3, h4 {
+  font-weight: 300;
+}
 h1 {
  font-size: 3.0rem;
 }
 h2 {
- font-size: 2.5rem;
+ font-size: 2.25rem;
 }
 h3{
- font-size: 1.5rem;
+ font-size: 1.75rem;
+}
+h4{
+  font-size: 1.1rem;
 }
 p {
  font-size: 1.0rem;
@@ -46,23 +65,36 @@ small {
 }
 a {
  text-decoration: none;
- color: black;
+ color: $color-primary2;
 }
-/* GRID SYSTEM */
+ul {
+  list-style-type: square;
+  padding-left: 18px;
+  color: $color-primary2;
+}
+ul ul {
+  list-style-type: circle;
+  padding-left: 18px;
+}
+li:empty {
+  display: none;
+}
 
+/* GRID SYSTEM */
 .row:after {
  content: '';
  clear: both;
  display: block;
 }
 .container {
- width: 80%;
+ width: 70%;
  padding: 0 15px;
  margin: 0 auto;
 }
 .col {
  float: left;
  position: relative;
+ padding-right: 5%;
 }
 .col-12 {
  width: 100%;
@@ -180,12 +212,16 @@ nav {
  width: 100%;
  z-index: 1;
  background-color: white;
- border-bottom: 1px solid lightslategrey;
+ border-bottom: 1px solid $color-secondary3;
+ box-shadow: 0px 1px 1px $color-secondary3;
+
 }
 .main-container {
  margin: 60px auto;
  margin-bottom: 0px;
  width: 100%;
+ min-height: 70vh;
+
 }
 .logo {
  background-image: image-url('pesteco_logo.png');
@@ -195,95 +231,45 @@ nav {
  display: inline-block;
  height: 60px;
  width: 100%;
-
+ margin-left: -7px;
 }
 .user-login {
   line-height: 60px;
+  a {
+    color: $color-primary2;
+  }
 }
-.nav-icon {
- line-height: 60px;
- padding-left: 20px;
+footer {
+  background-color: $color-secondary3;
+  h4 {
+    margin-bottom: 0px;
+  }
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
 }
-.about-me {
- height: calc(100vh - 60px);
- position: relative;
+.row-shade {
+  background-color: $color-primary4;
+  position: relative;
+  width: 100vw;
+  left: calc(-50vw + 50%);
 }
-.about-me h1 {
- display: inline;
- border-left: 5px solid chartreuse;
- padding-left: 10px;
-}
-.color-block:nth-child(even) {
- background-color: gainsboro;
-}
-.arrow-down {
- position: absolute;
- left: 50%;
- bottom: 5%;
- transform: translateX(-50%)rotate(45deg);
- width: 2rem;
- height: 2rem;
- border: 4px solid;
- border-top-color: transparent;
- border-left-color: transparent;
-}
-.heading {
- border-bottom: 5px solid black;
- font-size: 18px;
- position: absolute;
- top: 5%;
-}
-.img-profile {
- display: block;
- margin: 0 auto;
- border-radius: 100%;
- width: 50%;
- max-width: 200px;
-}
-
-
-.img-caption {
- display: block;
- text-align: center;
- margin: 10px auto;
- font-size: 14px;
- letter-spacing: -0.5px;
-}
-.link {
- display: block;
- font-size: 18px;
- margin: 10% 0;
- border-left: 5px solid chartreuse;
- padding-left: 10px;
- cursor: pointer;
-}
-.link.link-right {
- border-left: none;
- border-right: 5px solid white;
- padding-right: 10px;
-}
-.img-splittr {
- width: 80%;
- max-width: 200px;
-}
-.devicons {
- color: lightslategray;
- font-size: 2.5em;
- margin: 0 5px;
-}
-.tech-stack {
- border-right: 5px solid gainsboro;
- margin-top: 5px;
- padding-right: 15px;
-}
-
-.tech-stack-left {
- border-left: 5px solid white;
- margin-top: 5px;
- padding-left: 15px;
+.call-out {
+  margin: 30px 0px 0px 0px;
+  padding: 20px 0;
 }
 /* Phone size */
 @media (max-width: 760px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.625rem;
+  }
+  h3 {
+    font-size: 1.375rem;
+  }
  .container {
    width: 100%;
  }
@@ -305,20 +291,15 @@ nav {
 
 /* Phone size landscape */
 @media (max-width: 760px) and (orientation:landscape) {
- img.img-profile {
-   display: none;
- }
- img.img-splittr {
-   display: none;
- }
- .tech-stack, .tech-stack-left {
-   display: none;
- }
+// Placeholder
 }
 
 
 /* iPad size */
 @media (max-width: 1200px) and (min-width: 761px) {
+ .container {
+   width: 80%;
+ }
  .md-col-12 {
    width: 100%;
    margin-left: 0%;
