--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,9 +21,9 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row row-shade">
   <div class="col-12 center">
-    <div class="call-out row-shade">
+    <div class="call-out">
       <h2>Contact us for a quote</h2>
       <h3>0411 268 868</h3>
 
