--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,7 +94,6 @@ li:empty {
 .col {
  float: left;
  position: relative;
- padding-right: 5%;
 }
 .col-12 {
  width: 100%;
@@ -241,6 +240,8 @@ nav {
 }
 footer {
   background-color: $color-secondary3;
+  padding-bottom: 30px;
+  margin-top: 50px;
   h4 {
     margin-bottom: 0px;
   }
@@ -259,10 +260,84 @@ footer {
   margin: 30px 0px 0px 0px;
   padding: 20px 0;
 }
+
+/* FORM STYLING */
+input, textarea {
+  -webkit-appearance: none;
+  height: 30px;
+  padding: 6px 10px;
+  font-size: 14px;
+  text-align: left;
+  margin: 5px;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  border: 1px solid #ccc;
+  color: #555;
+  width: 95%;
+}
+textarea {
+  height: 100px;
+}
+::-webkit-input-placeholder {
+  color: #555;
+}
+input:focus {
+  outline: 0;
+}
+button, input[type=submit] {
+  -webkit-appearance: none;
+  background-color: $color-primary1;
+  color: white;
+  padding: 10px 12px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  cursor: pointer;
+  border-radius: 3px;
+  border: 0;
+  font-size: 16px;
+  line-height: 10px;
+  outline: 0 none;
+  width: auto;
+  min-width: 100px;
+  text-align: center;
+  a {
+    color: white;
+  }
+}
+fieldset {
+  border-color: $color-primary1;
+}
+/* TABLE STYLING */
+table {
+  width: 100%;
+  background-color: $color-secondary4;
+  border-collapse: collapse;
+  border-radius: 2px;
+}
+tr {
+  height: 40px;
+  font-weight: normal;
+}
+tr:nth-child(even) {
+  background-color: $color-secondary3;
+}
+th, td {
+  text-align: left;
+  padding-left: 10px;
+}
+th {
+  background-color: white;
+}
+
+
+
+
+
 /* Phone size */
 @media (max-width: 760px) {
   h1 {
     font-size: 2rem;
+    line-height: 1.2;
   }
   h2 {
     font-size: 1.625rem;
