--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -28,21 +28,17 @@
   <tr>
     <th>Name</th>
     <th>Email</th>
-    <th>Mobile</th>
-    <th>Link</th>
   </tr>
   <% @client.users.each do |user| %>
   <tr>
-    <td><%= user.name  %></td>
-    <td><%= user.email %></td>
-    <td><%= user.mobile %></td>
     <td>
       <% if @current_user == user || @current_user.admin%>
-        <%= link_to 'Open', user_path(user) %>
+        <%= link_to user.name, user_path(user) %>
       <% else %>
         <%= user.name  %>
       <% end %>
     </td>
+    <td><%= user.email %></td>
   </tr>
   <% end %>
 </table>
