--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -14,4 +14,4 @@
   </p>
 <% end %>
 
-<p><%= link_to "Forgot password", new_password_reset_path %></p>
+<p><%= link_to "Forgot password ?", new_password_reset_path %></p>
