--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -18,6 +18,8 @@
 
 <% end %>
 
+<%= will_paginate @posts_news %>
+
 <% if @current_user && @current_user.admin %>
 <button>
   <%= link_to 'Add new post', new_post_path %>
