--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,7 +11,7 @@
     </p>
     <p>
       <%= f.label :body %><br>
-      <%= f.text_area :body%>
+      <%= f.cktext_area :body%>
     </p>
     <p>
       <%= f.label :category %><br>
