--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,6 +71,9 @@ ul {
   list-style-type: square;
   padding-left: 18px;
 }
+ol {
+  padding-left: 18px;
+}
 ul ul {
   list-style-type: circle;
   padding-left: 18px;
