added new post add function

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,8 +11,9 @@
     </p>
     <p>
       <%= f.label :body %><br>
-      <%= f.cktext_area :body%>
+      <%= f.text_area :body, :id => 'trumbowyg-demo'%>
     </p>
+    
     <p>
       <%= f.label :category %><br>
       <%= f.select :category, Post::CATEGORY, prompt: "Pick one" %>
