Changed image path or svg icons to enable erb

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -18,7 +18,7 @@
 
 $(document).ready(function(){
   $('#trumbowyg-demo').trumbowyg({
-    svgPath: '/assets/trumbowyg/images/icons.svg',
+    svgPath: '<%= image_path "icons.svg" %>',
     autogrow: true,
     btns: [
         ['formatting'],
