Added login instructions

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,9 +15,9 @@
     <h2>Pesteco clients</h2>
     <p>Existing pesteco clients can access their reports by logging in to the Pesteco Dashboard service
     </p>
-    <p>
-      <%= link_to 'Login to Pesteco Dashboard', login_path %>
-    </p>
+    <button>
+      <%= link_to 'Client Login to Pesteco Dashboard', login_path %>
+    </button>
   </div>
 </div>
 
