--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -264,6 +264,7 @@ footer {
   padding: 20px 0;
 }
 
+
 /* FORM STYLING */
 input, textarea {
   -webkit-appearance: none;
@@ -277,12 +278,13 @@ input, textarea {
   border: 1px solid #ccc;
   color: #555;
   width: 95%;
+  max-width: 500px;
 }
 textarea {
   height: 100px;
 }
 ::-webkit-input-placeholder {
-  color: #555;
+  color: #ccc;
 }
 input:focus {
   outline: 0;
@@ -291,14 +293,15 @@ button, input[type=submit] {
   -webkit-appearance: none;
   background-color: $color-primary1;
   color: white;
-  padding: 10px 12px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  padding: 6px 16px;
+  margin-top: 16px;
+  margin-bottom: 16px;
   cursor: pointer;
   border-radius: 3px;
   border: 0;
   font-size: 16px;
-  line-height: 10px;
+  min-height: 40px;
+  line-height: normal;
   outline: 0 none;
   width: auto;
   min-width: 100px;
@@ -337,9 +340,6 @@ th, td {
 th {
   background-color: white;
 }
-
-
-
 
 
 /* Phone size */
