--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_tag password_resets_path, :method => :post do %>
   <p>
     <%= label_tag :email %> <br>
-    <%= email_field_tag :email, '', :required => true %>
+    <%= email_field_tag :email, '', :required => true, :placeholder => 'Email' %>
   </p>
   <p>
     <%= submit_tag 'Reset password' %>
