--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,13 +1,20 @@
-<h1>Login</h1>
+<h1>Client Login</h1>
+
+<p>Enter your email and password below to access your company profile and Pesteco building reports.</p>
+
+<p>
+  Click on the 'Forgot password?' link below to have your password reset instructions sent to your email.  
+</p>
+
 
 <%= form_tag login_path do %>
   <p>
     <%= label_tag :email %><br>
-    <%= email_field_tag :email, '', required: true, autofocus: true %>
+    <%= email_field_tag :email, '', required: true, placeholder: 'Email', autofocus: true %>
   </p>
   <p>
     <%= label_tag :password %><br>
-    <%= password_field_tag :password, '', required: true %>
+    <%= password_field_tag :password, '', required: true, placeholder: 'Password' %>
   </p>
   <p>
     <%= submit_tag 'Login' %>
