Changed reset password instructions

--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,5 +1,12 @@
 <h1>Reset password</h1>
 
+<p>
+  Enter your registered Pesteco email below to have your secure reset password link and instructions sent to your email.
+</p>
+<p>
+  If you do not, or are unsure if you have a Pesteco client account, <a href="mailto:bogdan@pesteco.com.au">email Pesteco directly</a>.
+</p>
+
 <%= form_tag password_resets_path, :method => :post do %>
   <p>
     <%= label_tag :email %> <br>
