--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -3,7 +3,7 @@
 <p>Enter your email and password below to access your company profile and Pesteco building reports.</p>
 
 <p>
-  Click on the 'Forgot password?' link below to have your password reset instructions sent to your email.  
+  Click on <%= link_to "Forgot password ?", new_password_reset_path %> to have your password reset instructions sent to your email.  
 </p>
 
 
