--- a/app/views/pages/certification.html.erb
+++ b/app/views/pages/certification.html.erb
@@ -10,6 +10,6 @@
 
 <% if @current_user && @current_user.admin %>
 <button>
-  <%= link_to 'Add new insurance', new_post_path %>
+  <%= link_to 'Add new certification', new_post_path %>
 </button>
 <% end %>
