--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -14,4 +14,4 @@
 
 <h3>Reach out to us today</h3>
 <p>Tel: 0411 268 868</p>
-<p>Email: bogdan@pesteco.com</p>
+<p>Email: <a href="mailto:bogdan@pesteco.com.au">bogdan@pesteco.com.au</a></p>
