--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,11 +1,6 @@
 <h1>Client Login</h1>
 
-<p>Enter your email and password below to access your company profile and Pesteco building reports.</p>
-
-<p>
-  Click on <%= link_to "Forgot password ?", new_password_reset_path %> to have your password reset instructions sent to your email.  
-</p>
-
+<p>Enter your email and password below to access your company dashboard and Pesteco building reports.</p>
 
 <%= form_tag login_path do %>
   <p>
@@ -22,3 +17,6 @@
 <% end %>
 
 <p><%= link_to "Forgot password ?", new_password_reset_path %></p>
+<small>
+  Click above link to have your password reset instructions sent to your email.
+</small>
