--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -17,6 +17,14 @@
 //= require_tree .
 
 $(document).ready(function(){
+
+  // For ios homescreen prevent loading new safari window
+  $('a').click(function() {
+    document.location = $(this).attr('href');
+    return false;
+  });
+
+  // Load wysywig text editor
   $('#trumbowyg-demo').trumbowyg({
     svgPath: '<%= image_path "icons.svg" %>',
     autogrow: true,
