--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -14,6 +14,7 @@
 //= require jquery_ujs
 //= require cloudinary
 //= require trumbowyg/trumbowyg
+//= require addtohomescreen
 //= require_tree .
 
 $(document).ready(function(){
