--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,13 @@
 <h1>Pest management professionals</h1>
 <p>Pesteco is Australia’s most highly certified pest management company.</p>
-<p>Based in Sydney, we deliver full-service expertise across retail, hospitality, commercial and residential property sectors.</p>
+<p>Operating across NSW and ACT, we deliver full-service expertise across retail, hospitality, commercial and residential property sectors.</p>
 
 <div class="row">
   <div class="col sm-col-12 col-6">
     <h2>About us</h2>
     <p>Find out more information about our fully-certified and environmentally safe pest management solutions</p>
     <p>
-      <%= link_to 'Services', services_path %>
+      <%= link_to 'Find out more', services_path %>
     </p>
   </div>
 
@@ -15,19 +15,21 @@
     <h2>Pesteco clients</h2>
     <p>Existing pesteco clients can access their reports by logging in to the Pesteco Dashboard service
     </p>
-    <button>
-      <%= link_to 'Client Login to Pesteco Dashboard', login_path %>
-    </button>
+
+    <%= link_to login_path do %>
+      <button>Client dashboard login</button>
+    <% end %>
+
   </div>
 </div>
 
 <div class="row row-shade">
-  <div class="col-12 center">
-    <div class="call-out">
-      <h2>Contact us for a quote</h2>
-      <h3>0411 268 868</h3>
+<div class="col-12 center">
+  <div class="call-out">
+    <h2>Contact us</h2>
+    <h3>0411 268 868</h3>
 
-      <h3><a href="mailto:bogdan@pesteco.com.au">Email us</a></h3>
-    </div>
+    <h3><a href="mailto:info@pesteco.com.au">Email us</a></h3>
   </div>
+</div>
 </div>
