--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
 <h1>Contact us</h1>
 <p>Tel: 0411 268 868</p>
-<p>Email: bogdan@pesteco.com.au</p>
+<p>Email: info@pesteco.com.au</p>
 <p>Address: PO Box 817, Bondi Junction, NSW, 1355</p>
