--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,6 +1,9 @@
 <h1>Pesteco services</h1>
 <p>Pesteco is the most certified pest management company in Australia, across all commercial, residential and hospitality sectors.</p>
 <p>We guarantee a higher quality standard, an environmentally sustainable solution and the safest possible work environment for our client and our employees.</p>
+
+<h3>Expertise</h3>
+<p>Our extensive knowledge and industry experience ensures a balance between an understanding of pest control standards, occupational safety and health requirements and client satisfaction, making Pesteco a leader in the industry.</p>
 <p><%= link_to 'See our certification', certification_path %></p>
 <p><%= link_to 'See our insurance', insurance_path %></p>
 
@@ -14,4 +17,4 @@
 
 <h3>Reach out to us today</h3>
 <p>Tel: 0411 268 868</p>
-<p>Email: <a href="mailto:bogdan@pesteco.com.au">bogdan@pesteco.com.au</a></p>
+<p>Email: <a href="mailto:info@pesteco.com.au">info@pesteco.com.au</a></p>
