--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@ html, body {
  overflow-x: hidden;
  margin: 0;
  max-width: 100%;
- font-family: 'Arial';
+ font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  line-height: 1.6;
  background-color: $color-secondary4;
@@ -46,9 +46,11 @@ html, body {
 /* TYPOGRAPHY */
 h2, h3, h4 {
   font-weight: 300;
+  font-family: 'Roboto', sans-serif;
 }
 h1 {
  font-size: 3.0rem;
+ font-family: 'Roboto', sans-serif;
 }
 h2 {
  font-size: 2.25rem;
@@ -226,6 +228,27 @@ nav {
  min-height: 70vh;
 
 }
+
+.heading {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: 45px;
+  display: block;
+  margin-top: 75px;
+  color: $color-primary2;
+}
+
+.subheading {
+  font-weight: lighter;
+  font-size: 18px;
+  margin-top: 5px;
+  margin-bottom: 59px;
+}
+
+.subheading strong {
+  color: $color-primary1;
+}
+
 .logo {
  background-image: image-url('pesteco_logo.png');
  background-repeat: no-repeat;
@@ -242,6 +265,8 @@ nav {
     color: $color-primary2;
   }
 }
+
+
 footer {
   background-color: $color-secondary3;
   padding-bottom: 30px;
