--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <meta name="viewport" content="minimal-ui, width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <%= favicon_link_tag 'pesteco_favicon.png', type: 'image/png' %>
     <%= favicon_link_tag 'pesteco_favicon.png', rel: 'apple-touch-icon', type: 'image/png' %>
   </head>
