--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,14 @@
-<h1>Pest management professionals</h1>
-<p>Pesteco is Australia’s most highly certified pest management company.</p>
-<p>Operating across NSW and ACT, we deliver full-service expertise across retail, hospitality, commercial and residential property sectors.</p>
+<div class="row">
+  <div class="col col-12 center">
+    <span class="heading">PEST CONTROL EXPERTS</span>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col col-6 offset-3 sm-col-12 center">
+    <p class="subheading">Pesteco is Australia’s <strong>most highly certified pest management company</strong> - We deliver full-service expertise across retail, hospitality, commercial and residential property sectors.</p>
+  </div>
+</div>
 
 <div class="row">
   <div class="col sm-col-12 col-6">
